# flywheel-engine

./: .gitignore  README.md  pyproject.toml
flywheel_engine/: room.py  tile.py
flywheel_engine.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_flywheel.py
